--- a/Views/kavemans.dev/DevLog/_EntryLayout.html
+++ b/Views/kavemans.dev/DevLog/_EntryLayout.html
@@ -18,6 +18,9 @@
     <div class="contentWrapper">
       <main class="container centerize">
         <model src="kavemans.dev/announcements"></model>
+        <div class="dynamicMargin">
+          <a href="/">Home</a> / <a href="/devlog">DevLogs</a> / {?:Post.TitleText}
+        </div>
         <h2 style="margin-block-end: 0;">
           {?:Post.TitleText}
           <span class="tags">{?:Tags}</span>
