--- a/Views/kavemans.dev/Common/Container.html
+++ b/Views/kavemans.dev/Common/Container.html
@@ -1,4 +1,4 @@
 <div class="{?:ClassList}">
-  <h2 style="margin-block-end: 0;">{?:Header}<span>{?:SubHeader}</span></h2>
+  <h2>{?:Header}<span>{?:SubHeader}</span></h2>
   <div class="feed dynamicMargin">{?:Content}</div>
 </div>
