--- a/Views/kavemans.dev/DevLog/_EntryLayout.html
+++ b/Views/kavemans.dev/DevLog/_EntryLayout.html
@@ -16,7 +16,7 @@
     <model src="kavemans.dev/header.html"></model>
     <div class="header"></div>
     <div class="contentWrapper">
-      <main class="container centerize">
+      <main class="container centerize devlogContainer">
         <model src="kavemans.dev/announcements"></model>
         <div class="dynamicMargin">
           <a href="/">Home</a> / <a href="/devlog">DevLogs</a> / {?:Post.TitleText}
