--- a/Views/kavemans.dev/DevLog/_Layout.html
+++ b/Views/kavemans.dev/DevLog/_Layout.html
@@ -14,7 +14,7 @@
     <model src="kavemans.dev/header.html"></model>
     <div class="header"></div>
     <div class="contentWrapper">
-      <main class="container centerize">
+      <main class="container centerize devlogContainer">
         <model src="kavemans.dev/announcements"></model>
         <h2>Development Log<span>Recent things I've worked on</span></h2>
         <div class="feed dynamicMargin">{?:Posts}</div>
