--- a/Views/kavemans.dev/Homepage/_Layout.html
+++ b/Views/kavemans.dev/Homepage/_Layout.html
@@ -16,7 +16,7 @@
         <div class="announcementsContainer">
           <model src="kavemans.dev/announcements"></model>
         </div>
-        <div class="intro landing strongTextShadow" style="--background-image: url('./../sprites/ChannelIcon.jpg'); --border-radius: 50%;">
+        <div class="intro landing strongTextShadow" style="--background-image: url('/src/sprites/ChannelIcon.jpg'); --border-radius: 50%;">
           <span>Hi, my name is Kaveman and I'm a...</span>
           <span id="mainRoleThing">Software Developer</span>
           <span class="linksBox centerize">
