--- a/Views/kavemans.dev/Projects.html
+++ b/Views/kavemans.dev/Projects.html
@@ -8,19 +8,20 @@
     <link href="/src/styles/common.css" type="text/css" rel="stylesheet" />
     <link href="/src/styles/main.css" type="text/css" rel="stylesheet" />
     <link href="/src/styles/devlog.css" type="text/css" rel="stylesheet" />
+    <link href="/src/styles/orgOverrides.css" type="text/css" rel="stylesheet" />
     <model src="kavemans.dev/FontAwesome"></model>
   </head>
   <body>
     <model src="kavemans.dev/header.html"></model>
     <div class="header"></div>
     <div class="contentWrapper">
-      <main id="projects" class="container centerize">
+      <main id="projects" class="container centerize devlogContainer" style="background-image: none;">
         <model src="kavemans.dev/announcements"></model>
         <h2>Organizations<span>Individual projects are under their respective organizations</span></h2>
         <div class="feed dynamicMargin centerize">{?:Organizations}</div>
         <br />
         <h2>Personal Projects<span>Projects not directly tied to any organization</span></h2>
-        <div class="feed dynamicMargin centerize">{?:LooseProjects}</div>
+        {?:LooseProjects}
       </main>
     </div>
     <model src="kavemans.dev/footer.html"></model>
