--- a/Public/kavemans.dev/src/styles/common.css
+++ b/Public/kavemans.dev/src/styles/common.css
@@ -120,6 +120,7 @@ main, .container {
 .container > h2 {
   font-size: 1.67rem;
   margin-block-start: 0;
+  margin-bottom: 16px;
 }
 
 .container > h2 > span {
