--- a/Public/kavemans.dev/src/styles/framework.css
+++ b/Public/kavemans.dev/src/styles/framework.css
@@ -10,10 +10,10 @@
 
 @font-face {
   font-family: 'Open Sans Light';
-  src: url('./../fonts/OpenSans/Light.eot');
+  src: url('/src/fonts/OpenSans/Light.eot');
   src: local('Open Sans Light'),
-    url('./../fonts/OpenSans/Light.woff') format('woff'),
-    url('./../fonts/OpenSans/Light.ttf') format('truetype');
+    url('/src/fonts/OpenSans/Light.woff') format('woff'),
+    url('/src/fonts/OpenSans/Light.ttf') format('truetype');
 }
 
 /* Poppins font... not used
