--- a/Views/kavemans.dev/ProjectPage/_Layout.html
+++ b/Views/kavemans.dev/ProjectPage/_Layout.html
@@ -9,6 +9,8 @@
     <link href="/src/styles/main.css" type="text/css" rel="stylesheet" />
     <link href="/src/styles/orgOverrides.css" type="text/css" rel="stylesheet" />
     <link href="/src/styles/projectOverrides.css" type="text/css" rel="stylesheet" />
+    <link href="/src/styles/devlog.css" type="text/css" rel="stylesheet" />
+    <link href="/src/styles/markdown.css" type="text/css" rel="stylesheet" />
     <model src="kavemans.dev/FontAwesome"></model>
   </head>
   <body>
@@ -31,12 +33,13 @@
       </div>
       <div class="container centerize">
         <h2>Project Details<span>Info behind this project</span></h2>
-        <div class="dynamicMargin">{?:Project.OverviewMarkdown}</div>
+        <div class="dynamicMargin md">{?:Project.OverviewMarkdown}</div>
       </div>
       <div id="projects" class="container centerize hr">
         <h2>Technologies Used<span>What engines, frameworks and tools were used</span></h2>
         {?:TechnologiesUsed}
       </div>
+      {?:RelatedDevLogs}
       {?:MediaContainer}
     </div>
     <model src="kavemans.dev/footer.html"></model>
